@@ -1,12 +1,10 @@
 Package: Rvmmin
 Type: Package
 Title: Variable metric nonlinear function minimization with bounds constraints
-Version: 2012-07.09
-Date: 2012-07-09
+Version: 2012-08.21
+Date: 2012-08-21
 Author: John C. Nash
 Maintainer: John C. Nash <nashjc@uottawa.ca>
 Description: Variable metric nonlinear function minimization with bounds constraints
-Depends: optfntools
-Suggests: numDeriv
 License: GPL (>= 2)
 
