@@ -1,0 +1,13 @@
+grfwd <- function(par, userfn, fbase=NULL, eps=1.0e-7, ...) {
+   # Forward different gradient approximation
+   if (is.null(fbase)) fbase <- userfn(par, ...)  # ensure we function value at par
+   df <- rep(NA, length(par))
+   teps <- eps * (abs(par) + eps)
+   for (i in 1:length(par)) {
+      dx <- par
+      dx[i] <- dx[i] + teps[i]
+      df[i] <- (userfn(dx, ...) - fbase)/teps[i]
+   }
+   df
+}
+
